Fix spacing issues for card views
Title without description too close to the footer.

--- a/resources/ext.collections.styles/collections.less
+++ b/resources/ext.collections.styles/collections.less
@@ -25,8 +25,6 @@
 
 		.collection-description {
 			color: @grayMediumLight;
-
-			margin-bottom: 1em;
 		}
 
 		.collection-owner {
@@ -84,7 +82,7 @@
 
 		.collection-item-footer {
 			// Make footer run to edges
-			margin: 0 -@collectionItemPadding;
+			margin: 1em -@collectionItemPadding 0;
 			padding: @collectionItemPadding;
 			text-align: right;
 			border-top: 1px solid @grayLightest;
